--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,6 @@
 /*====== GOOGLE FONTS ======*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
-/*====== BASE ======*/
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 /*====== VARIABLES CSS ======*/
 :root{
 
@@ -67,5 +60,60 @@
             --smaller-font-size: .75rem;
         }
     }
+
+    /*====== BASE ======*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: black;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body,
+button,
+input {
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    
+}
+
+body{
+    background-color: var(--body-color);
+    color: var(--text-color);
+}
+
+h1, 
+h2, 
+h3{
+    color: var(--title-color);
+    font-weight: var(--font-bold);
+}
+
+ul{
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+button {
+    cursor: pointer;
+}
+
+button,
+input {
+    border: none;
+    outline: none;
+}
 
 }
