--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,3 +202,10 @@ input {
     right: 0;
     margin: auto;
 }
+
+/*=============== MAIN ===============*/
+
+.main {
+    margin-left: 100px;
+    padding: 1rem;
+}
