--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,85 @@ body.dark-mode {
     transition: background-color 0.5s ease, color 0.5s ease, background-image 0.5s ease;
 }
 
+.theme-mode {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+/* theme switcher */
+.theme-mode input {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+}
+
+/* Label del toggle de tema */
+.theme-mode label {
+    width: 60px;
+    height: 30px;
+    position: relative;
+    display: block;
+    background-color: var(--surface-color);
+    border-radius: 30px;
+    box-shadow: inset 0px 5px 15px var(--background-color), inset 0px -5px 15px var(--surface-color);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+/* Círculo deslizante dentro del toggle */
+.theme-mode label:after {
+    content: "";
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    background-color: var(--primary-color); /* Se usa el color primario para el círculo */
+    border-radius: 50px;
+    box-shadow: 0px 5px 10px var(--border-color);
+    transition: 0.5s;
+}
+
+/* Cambiar el color de fondo cuando se selecciona el tema oscuro */
+.theme-mode input:checked + label {
+    background-color: var(--hover-color); /* Color de hover más oscuro cuando está activado */
+}
+
+/* Desplazamiento del círculo en el toggle */
+.theme-mode input:checked + label::after {
+    left: 57px;
+    transform: translateX(-100%);
+    background-color: var(--accent-color); /* Se cambia a un color de acento para resaltar el círculo */
+}
+
+/* Efecto cuando el botón se presiona */
+.theme-mode label:active::after {
+    width: 30px;
+}
+
+/* Iconos sol y luna */
+.theme-mode label .sun, .theme-mode label .moon {
+    position: absolute;
+    width: 20px;
+    height: 20px;  /* Ajuste de tamaño */
+    top: 50%; /* Centrado vertical */
+    transform: translateY(-50%); /* Asegura que el icono esté centrado verticalmente */
+    z-index: 2;
+    transition: 0.3s;
+}
+
+/* Posicionar el icono del sol y luna */
+.theme-mode label .sun {
+    left: 5px;
+}
+
+.theme-mode label .moon {
+    right: 5px; /* Luna con color secundario en modo claro */
+}
 
 .interface {
     max-width: 1280px;
