--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,7 @@ body.dark-mode {
     transition: background-color 0.5s ease, color 0.5s ease, background-image 0.5s ease;
 }
 
-.theme-mode {
-    position: fixed;
+.theme-mode-desktop, .theme-mode-mobile {
     top: 20px;
     right: 20px;
     display: flex;
@@ -67,14 +66,14 @@ body.dark-mode {
 }
 
 /* theme switcher */
-.theme-mode input {
+.theme-mode-desktop input, .theme-mode-mobile input {
     width: 0;
     height: 0;
     visibility: hidden;
 }
 
 /* Label del toggle de tema */
-.theme-mode label {
+.theme-mode-desktop label, .theme-mode-mobile label {
     width: 60px;
     height: 30px;
     position: relative;
@@ -87,7 +86,7 @@ body.dark-mode {
 }
 
 /* Círculo deslizante dentro del toggle */
-.theme-mode label:after {
+.theme-mode-desktop label:after, .theme-mode-mobile label:after {
     content: "";
     width: 25px;
     height: 25px;
@@ -101,24 +100,24 @@ body.dark-mode {
 }
 
 /* Cambiar el color de fondo cuando se selecciona el tema oscuro */
-.theme-mode input:checked + label {
+.theme-mode-desktop input:checked + label, .theme-mode-mobile input:checked + label {
     background-color: var(--hover-color); /* Color de hover más oscuro cuando está activado */
 }
 
 /* Desplazamiento del círculo en el toggle */
-.theme-mode input:checked + label::after {
+.theme-mode-desktop input:checked + label::after, .theme-mode-mobile input:checked + label::after {
     left: 57px;
     transform: translateX(-100%);
     background-color: var(--accent-color); /* Se cambia a un color de acento para resaltar el círculo */
 }
 
 /* Efecto cuando el botón se presiona */
-.theme-mode label:active::after {
+.theme-mode-desktop label:active::after, .theme-mode-mobile label:active::after {
     width: 30px;
 }
 
 /* Iconos sol y luna */
-.theme-mode label .sun, .theme-mode label .moon {
+.theme-mode-desktop label .sun, .theme-mode-desktop label .moon, .theme-mode-mobile label .sun, .theme-mode-mobile label .moon {
     position: absolute;
     width: 20px;
     height: 20px;  /* Ajuste de tamaño */
@@ -129,11 +128,11 @@ body.dark-mode {
 }
 
 /* Posicionar el icono del sol y luna */
-.theme-mode label .sun {
+.theme-mode-desktop label .sun, .theme-mode-mobile label .sun {
     left: 5px;
 }
 
-.theme-mode label .moon {
+.theme-mode-desktop label .moon, .theme-mode-mobile label .moon {
     right: 5px; /* Luna con color secundario en modo claro */
 }
 
@@ -249,6 +248,17 @@ header .logo img {
     transition: .5s;
 }
 
+.menu-mobile div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+}
+
+.menu-mobile div.theme-mode-mobile {
+    padding: 20px 10%;
+}
+
 .menu-mobile.open-menu {
     width: 70%;
 }
@@ -270,7 +280,7 @@ header .logo img {
     color: var(--background-color);
 }
 
-.menu-mobile .btn-close {
+.menu-mobile .btn-close  {
     padding: 20px 5%;
 }
 
@@ -557,7 +567,7 @@ footer .logo-footer img {
 
 /** MEDIA QUERIES **/
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1120px) {
 
     /* GENERAL */
     .flex {
@@ -590,6 +600,10 @@ footer .logo-footer img {
     /* HEADER */
     .menu-desktop,
     .btn-contact {
+        display: none;
+    }
+
+    .theme-mode-desktop{
         display: none;
     }
 
