feat: Initialize React application with TypeScript, Tailwind CSS, and dark mode support
- Created main application structure with App component and routing.
- Added components: Header, Footer, About, Portfolio, Contact, Specialties, and TopSite.
- Implemented dark mode toggle functionality.
- Integrated SVG logo and social media links in the footer.
- Developed contact form with email functionality.
- Styled components using Tailwind CSS.
- Configured TypeScript settings for the project.
- Set up Vite as the build tool with React and Tailwind CSS plugins.

--- a/src/App.css
+++ b/src/App.css
@@ -232,7 +232,7 @@ header .logo img {
 }
 
 .btn-open-menu i {
-    color: var(--color-secondary);
+    color: var(--primary-color);
     font-size: 40px;
 }
 
@@ -281,6 +281,7 @@ header .logo img {
 }
 
 .menu-mobile .btn-close  {
+    cursor: pointer;
     padding: 20px 5%;
 }
 
@@ -602,6 +603,15 @@ footer .logo-footer img {
     .btn-contact {
         display: none;
     }
+    
+    .btn-open-menu {
+        display: block;
+        cursor: pointer;
+        position: fixed;
+        top: 40px;
+        right: 4%;
+        z-index: 90000;
+    }
 
     .theme-mode-desktop{
         display: none;
@@ -609,10 +619,6 @@ footer .logo-footer img {
 
     header .logo {
         align-items: center;
-    }
-
-    .btn-open-menu {
-        display: block;
     }
 
     /* SPECIALITIES */
